--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ import {
   Typography,
   CircularProgress,
   Alert,
+  TextField,
 } from "@mui/material";
+import TextareaAutosize from "@mui/material/TextareaAutosize"; // Auto-Expanding Text Field
 import InfoIcon from "@mui/icons-material/Info";
 
 const ScopeManagement = () => {
@@ -31,7 +33,7 @@ const ScopeManagement = () => {
     fetchCSFScopeData();
   }, []);
 
-  // Test Data (Only for Business Unit Owner & Auditor Custodian)
+  // Test Data (ONLY for Business Unit Owner & Auditor Custodian)
   const businessUnitOwners = ["Owner 1", "Owner 2", "Owner 3"];
   const auditors = ["Auditor A", "Auditor B", "Auditor C"];
 
@@ -39,10 +41,10 @@ const ScopeManagement = () => {
   const profileTypes = ["Provider", "Contributor", "Both", "Inheritor"];
   const businessUnits = ["ABC", "UIO", "POA", "SKA-C"];
 
-  // Define Table Columns with Dynamic Behaviors
+  // Define Table Columns with Proper Select & Multi-Select Fields
   const columns = useMemo(
     () => [
-      // Grouping Columns (Subcategory Level)
+      // Level 1: Grouping Columns (Subcategory Level)
       {
         accessorKey: "subcategoryName",
         header: "Subcategory Name",
@@ -59,7 +61,7 @@ const ScopeManagement = () => {
         enableGrouping: true,
       },
 
-      // Business Unit Level (Inline Editable)
+      // Level 2: Business Unit Level (Inline Editable)
       {
         accessorKey: "businessUnitAbbr",
         header: "Business Unit Abbr",
@@ -120,11 +122,19 @@ const ScopeManagement = () => {
         ),
       },
 
-      // Conditional Justification Column (Shown only if IsInScope = No)
+      // Conditional Justification Column (Auto-Expanding Text Field)
       {
         accessorKey: "auditorJustification",
         header: "Auditor Justification",
         enableEditing: (row) => row.original.auditorIsInScope === "No",
+        editComponent: ({ cell, row }) => (
+          <TextareaAutosize
+            minRows={2}
+            style={{ width: "100%", fontSize: "14px" }}
+            value={cell.getValue() || ""}
+            onChange={(e) => row.updateData("auditorJustification", e.target.value)}
+          />
+        ),
       },
 
       {
@@ -183,22 +193,6 @@ const ScopeManagement = () => {
           </Select>
         ),
       },
-
-      {
-        accessorKey: "subcatOwnerAcceptRecommendation",
-        header: "Owner Accept Recommendation?",
-        enableEditing: true,
-        editComponent: ({ cell, row }) => (
-          <Select
-            value={cell.getValue() || ""}
-            onChange={(e) => row.updateData("subcatOwnerAcceptRecommendation", e.target.value)}
-            fullWidth
-          >
-            <MenuItem value="Yes">Yes</MenuItem>
-            <MenuItem value="No">No</MenuItem>
-          </Select>
-        ),
-      },
     ],
     []
   );
@@ -215,6 +209,7 @@ const ScopeManagement = () => {
           data={data}
           enableGrouping
           enableEditing
+          editMode="table" // ✅ Inline Editing (No Modals!)
           enableRowExpanding
           renderDetailPanel={({ row }) => <ProfileTypeDefinition />}
         />
@@ -230,10 +225,10 @@ const ProfileTypeDefinition = () => {
       <Typography variant="h6">
         <InfoIcon fontSize="small" /> Profile Type Definitions
       </Typography>
-      <Typography>🟢 <b>Provider:</b> Provides data to other units.</Typography>
-      <Typography>🟡 <b>Contributor:</b> Contributes to shared initiatives.</Typography>
-      <Typography>🔵 <b>Both:</b> Acts as both Provider and Contributor.</Typography>
-      <Typography>🔴 <b>Inheritor:</b> Receives data but does not contribute.</Typography>
+      <Typography>Provider: Provides data to other units.</Typography>
+      <Typography>Contributor: Contributes to shared initiatives.</Typography>
+      <Typography>Both: Acts as both Provider and Contributor.</Typography>
+      <Typography>Inheritor: Receives data but does not contribute.</Typography>
     </div>
   );
 };
